--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="shortcut icon" href="download(Final).png" type="image/x-icon">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href='../../../../../external.html?link=https://fonts.googleapis.com/css?family=Raleway:100,400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="normalize.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/normalize.min.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <div class="container">
@@ -108,9 +108,7 @@
 
 
 
-  <script src="jquery.min.js"></script>
-  <script src='jquery.countdown.min.js'></script>
-  <script src='TweenMax.min.js'></script>
-  <script src="index.js"></script>
+  <script src="./js/index.js"></script>
+  <script src='./js/TweenMax.min.js'></script>
 </body>
 </html>
