--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Soorme.com</title>
-  <link rel="shortcut icon" href="download(Final).png" type="image/x-icon">
+  <link rel="shortcut icon" href="icon.png" type="image/x-icon">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href='../../../../../external.html?link=https://fonts.googleapis.com/css?family=Raleway:100,400,700'
     rel='stylesheet' type='text/css'>
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="content">
       <div id="countdown"></div>
-      <img src="download(Final).png">
+      <img src="icon.png">
       <h2>Something is Brewing</h2>
     </div>
     <svg class="background__lights" id="lines" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
@@ -95,7 +95,7 @@
 
 
 
-  <script>
+  <!-- <script>
     document.onkeydown = function (e) {
       if (event.keyCode == 123) {
         return false;
@@ -138,13 +138,7 @@
       event.preventDefault();
       alert('Right Click is Disabled');
     }, false);
-  </script>
-
-
-
-
-  <script src="jquery.min.js"></script>
-  <script src='jquery.countdown.min.js'></script>
+  </script> -->
   <script src='TweenMax.min.js'></script>
   <script src="index.js"></script>
 </body>
