--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Soorme.com</title>
   <link rel="shortcut icon" href="icon2.png" type="image/x-icon">
+  <meta name="keywords" content="gurtaran, sahib, nit, iit, clothing, tshirt, shirt, sweatshirt, singh, sardar, sikh, boy, thapar, university, institute, Engineering, technology, punjab, patiala, chandigarh, mohali, developer, vlogger, vlog, youtube, google, gmail, development, github, gaming, geeks, soorme, giigaa, delhi, india, canada, visa">
+    
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href='../../../../../external.html?link=https://fonts.googleapis.com/css?family=Raleway:100,400,700'
     rel='stylesheet' type='text/css'>
