--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
   <meta charset="UTF-8">
   <title>Soorme.com</title>
   <link rel="shortcut icon" href="icon2.png" type="image/x-icon">
-  <meta name="keywords" content="gurtaran, sahib, nit, iit, clothing, tshirt, shirt, sweatshirt, singh, sardar, sikh, boy, thapar, university, institute, Engineering, technology, punjab, patiala, chandigarh, mohali, developer, vlogger, vlog, youtube, google, gmail, development, github, gaming, geeks, soorme, giigaa, delhi, india, canada, visa">
-    
+  
+  <meta name="keywords" content="soorme, soorme.com, soorme clothing, soorme punjab, soorme panjab, clothing, hoodies, tshirt, drop shoulder, polo tshirt, sweatshirt, singh, sardar, sikh, boy, panjab, punjab, patiala, chandigarh, mohali, developer, gaming, geeks, soorme, giigaa, canada, visa">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href='../../../../../external.html?link=https://fonts.googleapis.com/css?family=Raleway:100,400,700'
     rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="normalize.min.css">
   <link rel="stylesheet" href="style.css">
+
+<title>Soorme.com</title>
+<meta name="title" content="Soorme.com">
+<meta name="description" content="Soorme is a merchandise startup from the land of five rivers - Panjab. We are aiming at providing best quality products which will remind us our vast culture, past sacrifices and rich colourful tradition that we are forgetting in race of modernisation.">
+
+
+<meta property="og:type" content="website">
+<meta property="og:title" content="Soorme.com">
+<meta property="og:description" content="Soorme is a merchandise startup from the land of five rivers - Panjab. We are aiming at providing best quality products which will remind us our vast culture, past sacrifices and rich colourful tradition that we are forgetting in race of modernisation.">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:title" content="Soorme.com">
+<meta property="twitter:description" content="Soorme is a merchandise startup from the land of five rivers - Panjab. We are aiming at providing best quality products which will remind us our vast culture, past sacrifices and rich colourful tradition that we are forgetting in race of modernisation.">
+
 </head>
 
 <body>
