added saakhi page

--- a/saakhi.html
+++ b/saakhi.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saakhi - By Soorme</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <p>Soorme Saakhi</p>
+    <script>
+        window.location.href = "https://saakhi.soorme.com";
+    </script>
 </body>
 
 </html>
